Should work now

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-personality_compass_data/
+personality_compass_data/*
 # This file is used to ignore files in the Personality Compass project.
 # It is automatically generated and should not be edited manually.
