Also hides vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 personality_compass_data/*
+.vscode/
 # This file is used to ignore files in the Personality Compass project.
 # It is automatically generated and should not be edited manually.
